--- a/templates/loading.html
+++ b/templates/loading.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>home page</title>
+    <title>loading page</title>
     <link rel="shortcut icon" href="../static/favicon.png">
     <link rel="stylesheet" href="/static/css/base.css">
     <link rel="stylesheet" href="/static/css/loading.css">
