--- a/templates/resultER.html
+++ b/templates/resultER.html
@@ -23,11 +23,11 @@
             <div class="fl">
                 <ul>
                     <li><img src="../static/imgs/menu group.png" alt=""></li>
-                    <li id="DocumentID"><a href="https://arxiv.org/pdf/2206.14268.pdf">Document</a>
+                    <li id="DocumentID"><a href="https://arxiv.org/pdf/2206.14268.pdf">Paper</a>
                     </li>
-                    <li id="FQID"><a href="https://github.com/tanyuqian/knowledge-harvest-from-lms/">F&Q</a></li>
+                    <li id="FQID"><a href="https://github.com/tanyuqian/knowledge-harvest-from-lms/">Github</a></li>
                     <li id="AboutID"><a
-                            href="https://github.com/tanyuqian/knowledge-harvest-from-lms/blob/master/README.md">About</a>
+                            href="https://github.com/tanyuqian/knowledge-harvest-from-lms/blob/master/README.md">README</a>
                     </li>
                 </ul>
             </div>
