--- a/static/css/home.css
+++ b/static/css/home.css
@@ -431,13 +431,20 @@ body {
     font: normal 700 20px 'Poppins', sans-serif;
 }
 
-.footer_box .footer_body .information #contact_us .sub_content,
-.footer_box .footer_body .information #downloads .sub_content {
+.footer_box .footer_body .information #contact_us .sub_content {
     color: rgba(255, 255, 255, 1);
     margin-top: 12px;
     margin-bottom: 12px;
     font: normal 300 12px 'Poppins', sans-serif;
 }
+
+.footer_box .footer_body .information #downloads .sub_content {
+    color: rgba(255, 255, 255, 1);
+    margin-top: 45px;
+    margin-bottom: 12px;
+    font: normal 300 12px 'Poppins', sans-serif;
+}
+
 
 .footer_box .footer_body .information #downloads, .footer_box .footer_body .information #query {
     float: left;
