--- a/templates/resultER.html
+++ b/templates/resultER.html
@@ -22,7 +22,7 @@
         <div class="w nav_bar_body">
             <div class="fl">
                 <ul>
-                    <li><img src="../static/imgs/menu group.png" alt=""></li>
+                    <!-- <li><img src="../static/imgs/menu group.png" alt=""></li> -->
                     <li id="DocumentID"><a href="https://arxiv.org/pdf/2206.14268.pdf">Paper</a>
                     </li>
                     <li id="FQID"><a href="https://github.com/tanyuqian/knowledge-harvest-from-lms/">Github</a></li>
@@ -138,9 +138,12 @@
                 <span class="entity2">answer question</span>
                 <span class="source_from">source:RoBERTa-large</span>
                 <span class="each_tuple_FB">
-                    <a href="javascript:;"><img src="../static/imgs/check.png" alt=""></a>
+                    <a href="" class="check">✓</a>
+                    <a href="" class="wrong">X</a>
+                    <a href="" class="notknown">N/A</a>
+                    <!-- <a href="javascript:;"><img src="../static/imgs/check.png" alt=""></a>
                     <a href="javascript:;"><img src="../static/imgs/wrong.png" alt=""></a>
-                    <a href="javascript:;"><img src="../static/imgs/NA.png" alt=""></a>
+                    <a href="javascript:;"><img src="../static/imgs/NA.png" alt=""></a> -->
                 </span>
             </div>
 
@@ -153,9 +156,9 @@
                 <span class="entity2">face mask</span>
                 <span class="source_from">source:RoBERTa-large</span>
                 <span class="each_tuple_FB">
-                    <a href="javascript:;"><img src="../static/imgs/check.png" alt=""></a>
-                    <a href="javascript:;"><img src="../static/imgs/wrong.png" alt=""></a>
-                    <a href="javascript:;"><img src="../static/imgs/NA.png" alt=""></a>
+                    <a href="" class="check">✓</a>
+                    <a href="" class="wrong">X</a>
+                    <a href="" class="notknown">N/A</a>
                 </span>
             </div>
 
@@ -168,9 +171,9 @@
                 <span class="entity2">play football</span>
                 <span class="source_from">source:RoBERTa-large</span>
                 <span class="each_tuple_FB">
-                    <a href="javascript:;"><img src="../static/imgs/check.png" alt=""></a>
-                    <a href="javascript:;"><img src="../static/imgs/wrong.png" alt=""></a>
-                    <a href="javascript:;"><img src="../static/imgs/NA.png" alt=""></a>
+                    <a href="" class="check">✓</a>
+                    <a href="" class="wrong">X</a>
+                    <a href="" class="notknown">N/A</a>
                 </span>
             </div>
 
@@ -183,9 +186,9 @@
                 <span class="entity2">social media</span>
                 <span class="source_from">source:RoBERTa-large</span>
                 <span class="each_tuple_FB">
-                    <a href="javascript:;"><img src="../static/imgs/check.png" alt=""></a>
-                    <a href="javascript:;"><img src="../static/imgs/wrong.png" alt=""></a>
-                    <a href="javascript:;"><img src="../static/imgs/NA.png" alt=""></a>
+                    <a href="" class="check">✓</a>
+                    <a href="" class="wrong">X</a>
+                    <a href="" class="notknown">N/A</a>
                 </span>
             </div>
 
@@ -198,9 +201,9 @@
                 <span class="entity2">cross roads</span>
                 <span class="source_from">source:RoBERTa-large</span>
                 <span class="each_tuple_FB">
-                    <a href="javascript:;"><img src="../static/imgs/check.png" alt=""></a>
-                    <a href="javascript:;"><img src="../static/imgs/wrong.png" alt=""></a>
-                    <a href="javascript:;"><img src="../static/imgs/NA.png" alt=""></a>
+                    <a href="" class="check">✓</a>
+                    <a href="" class="wrong">X</a>
+                    <a href="" class="notknown">N/A</a>
                 </span>
             </div>
 
@@ -217,22 +220,27 @@
             <div class="information">
                 <div id="contact_us">
                     <p class="main_title">Contact Us</p>
-                    <p class="sub_content"><img src="../static/imgs/mail_outline.png" alt=""> 1234567@gmail.com</p>
-                    <p class="sub_content"><img src="../static/imgs/mail_outline.png" alt=""> 7654321@gmail.com</p>
-                    <p class="sub_content"><img src="../static/imgs/local_phone.png" alt=""> +123456789</p>
+                    <p class="sub_content"><img src="../static/imgs/mail_outline.png" alt=""> zhh019@ucsd.edu--Zhiting
+                        Hu</p>
+                    <p class="sub_content"><img src="../static/imgs/mail_outline.png" alt=""> s5hao@ucsd.edu--Shibo Hao
+                    </p>
+                    <p class="sub_content"><img src="../static/imgs/mail_outline.png" alt="">
+                        btan2@andrew.cmu.edu--Bowen Tan</p>
+                    <p class="sub_content"><img src="../static/imgs/mail_outline.png" alt="">
+                        bni@ucsd.edu--Bin Ni</p>
+
                 </div>
                 <div id="downloads">
-                    <p class="main_title">Downloads</p>
-                    <p class="sub_content"><a href="#"><img src="../static/imgs/file_download.png" alt=""></a>(88.88GB)
-                    </p>
+                    <p class="main_title"> </p>
+                    <p class="sub_content"><img src="../static/imgs/local_phone.png" alt=""> +(619)9549370--Bin Ni</p>
                 </div>
-                <div id="query">
+                <!-- <div id="query">
                     <p class="main_title">Have any question?</p>
                     <div>
                         <div class="feedback_box"><input type="text"><span><a href="#">Send</a></span></div>
 
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
