--- a/static/css/resultER.css
+++ b/static/css/resultER.css
@@ -464,15 +464,47 @@ body {
 
 .each_tuple .each_tuple_FB {
     width: 20%;
-
+    text-align: center;
+    padding-top: 7px;
 }
 
 .each_tuple .each_tuple_FB a {
+    box-sizing: border-box;
     display: inline-block;
+    vertical-align: middle;
     height: 28px;
-    line-height: 42px;
+    width: 28px;
     margin-left: 5%;
     margin-right: 5%;
+    border-radius: 8px;
+    padding-top: 2px;
+    color: white;
+    background-color: pink;
+    line-height: initial;
+    transition: 0.2s ease;
+}
+
+.each_tuple .each_tuple_FB .notknown {
+    padding-top: 5px;
+    font: normal 400 12px 'Poppins', sans-serif;
+}
+
+.each_tuple .each_tuple_FB .check:hover {
+    transform: scale(1.2);
+    background-color: #a2ef13;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.9);
+}
+
+.each_tuple .each_tuple_FB .wrong:hover {
+    transform: scale(1.2);
+    background-color: #ff2a00;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.9);
+}
+
+.each_tuple .each_tuple_FB .notknown:hover {
+    transform: scale(1.2);
+    background-color: #13ceef;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.9);
 }
 
 
@@ -531,10 +563,16 @@ body {
     font: normal 700 20px 'Poppins', sans-serif;
 }
 
-.footer_box .footer_body .information #contact_us .sub_content,
-.footer_box .footer_body .information #downloads .sub_content {
+.footer_box .footer_body .information #contact_us .sub_content {
     color: rgba(255, 255, 255, 1);
     margin-top: 12px;
+    margin-bottom: 12px;
+    font: normal 300 12px 'Poppins', sans-serif;
+}
+
+.footer_box .footer_body .information #downloads .sub_content {
+    color: rgba(255, 255, 255, 1);
+    margin-top: 45px;
     margin-bottom: 12px;
     font: normal 300 12px 'Poppins', sans-serif;
 }
