--- a/templates/home.html
+++ b/templates/home.html
@@ -23,11 +23,12 @@
             <div class="fl">
                 <ul>
                     <!-- <li><img src="../static/imgs/menu group.png" alt=""></li> -->
-                    <li id="DocumentID"><a href="https://arxiv.org/pdf/2206.14268.pdf">Paper</a>
-                    </li>
+
                     <li id="FQID"><a href="https://github.com/tanyuqian/knowledge-harvest-from-lms/">Github</a></li>
                     <li id="AboutID"><a
-                            href="https://github.com/tanyuqian/knowledge-harvest-from-lms/blob/master/README.md">README</a>
+                            href="https://github.com/tanyuqian/knowledge-harvest-from-lms/blob/master/README.md">About</a>
+                    </li>
+                    <li id="DocumentID"><a href="https://arxiv.org/pdf/2206.14268.pdf">Papers</a>
                     </li>
                 </ul>
             </div>
@@ -139,19 +140,12 @@
             <div class="information">
                 <div id="contact_us">
                     <p class="main_title">Contact Us</p>
-                    <p class="sub_content"><img src="../static/imgs/mail_outline.png" alt=""> zhh019@ucsd.edu--Zhiting
-                        Hu</p>
-                    <p class="sub_content"><img src="../static/imgs/mail_outline.png" alt=""> s5hao@ucsd.edu--Shibo Hao
-                    </p>
-                    <p class="sub_content"><img src="../static/imgs/mail_outline.png" alt="">
-                        btan2@andrew.cmu.edu--Bowen Tan</p>
-                    <p class="sub_content"><img src="../static/imgs/mail_outline.png" alt="">
-                        bni@ucsd.edu--Bin Ni</p>
+                    <p class="sub_content"><img src="../static/imgs/mail_outline.png" alt=""> lmnet@gmail.com </p>
                 </div>
-                <div id="downloads">
+                <!-- <div id="downloads">
                     <p class="main_title"> </p>
                     <p class="sub_content"><img src="../static/imgs/local_phone.png" alt=""> +(619)9549370--Bin Ni</p>
-                </div>
+                </div> -->
                 <!-- <div id="query">
                     <p class="main_title">Have any question?</p>
                     <div>
