--- a/templates/resultER.html
+++ b/templates/resultER.html
@@ -124,6 +124,64 @@
             <a href="javascript:;">Download Tuples</a>
         </div>
 
+        <div class="show_prompt_socre">
+            <div class="prompt">
+                <div class="title">Prompt Column</div>
+                <div class="prompt_entity">
+                    prompt_entity1
+                </div>
+                <div class="prompt_entity">
+                    prompt_entity2
+                </div>
+                <div class="prompt_entity">
+                    prompt_entity3
+                </div>
+                <div class="prompt_entity">
+                    prompt_entity4
+                </div>
+                <div class="prompt_entity">
+                    prompt_entity5
+                </div>
+                <div class="prompt_entity">
+                    prompt_entity6
+                </div>
+                <div class="prompt_entity">
+                    prompt_entity7
+                </div>
+                <div class="prompt_entity">
+                    prompt_entity8
+                </div>
+                <div class="prompt_entity">
+                    prompt_entity9
+                </div>
+                <div class="prompt_entity">
+                    prompt_entity10
+                </div>
+                <div class="prompt_entity">
+                    prompt_entity11
+                </div>
+                <div class="prompt_entity">
+                    prompt_entity12
+                </div>
+
+            </div>
+            <div class="score">
+                <div class="title">Score Column</div>
+                <div class="score_entity">score1</div>
+                <div class="score_entity">score2</div>
+                <div class="score_entity">score3</div>
+                <div class="score_entity">score4</div>
+                <div class="score_entity">score5</div>
+                <div class="score_entity">score6</div>
+                <div class="score_entity">score7</div>
+                <div class="score_entity">score8</div>
+                <div class="score_entity">score9</div>
+                <div class="score_entity">score10</div>
+                <div class="score_entity">score11</div>
+                <div class="score_entity">score12</div>
+            </div>
+        </div>
+
         <section class="result_tuples">
             <div class="head_table">
                 <span class="tuples_col">repsonse_dict</span>
