--- a/templates/resultER.html
+++ b/templates/resultER.html
@@ -24,7 +24,7 @@
                 <ul>
                     <!-- <li><img src="../static/imgs/menu group.png" alt=""></li> -->
 
-                    <li id="FQID"><a href="https://github.com/tanyuqian/knowledge-harvest-from-lms/">Github</a></li>
+                    <li id="Github"><a href="https://github.com/tanyuqian/knowledge-harvest-from-lms/">Github</a></li>
                     <li id="AboutID"><a
                             href="https://github.com/tanyuqian/knowledge-harvest-from-lms/blob/master/README.md">About</a>
                     </li>
@@ -39,14 +39,15 @@
 
                 <p>-- harvest kowledge graphs from pretrained language models --</p>
             </div>
-            <!-- <div class="fr">
+            <div class="fr">
                 <ul>
-                    <li><a href="{{ url_for('log_in') }}"><img src="../static/imgs/account_circle.png" alt=""></a>
+                    <!-- <li><a href="{{ url_for('log_in') }}"><img src="../static/imgs/account_circle.png" alt=""></a>
                     <li><a href="{{ url_for('sign_up')}}" id="sign_up_btn">sign up</a></li>
                     <li><a href="#"><img src="../static/imgs/notification_circle.png" alt=""></a></li>
-                    </li>
+                    </li> -->
+                    <li id="tuple_download"><a href="javascirpt:;">Download</a></li>
                 </ul>
-            </div> -->
+            </div>
         </div>
     </section>
     <section class="w result_board">
@@ -120,9 +121,9 @@
             <span class="seed_entity_name">desk & work on</span>
 
         </div>
-        <div class="download_but">
+        <!-- <div class="download_but">
             <a href="javascript:;">Download Tuples</a>
-        </div>
+        </div> -->
 
         <div class="show_prompt_socre">
             <div class="prompt">
@@ -197,9 +198,9 @@
                 <span class="entity2">answer question</span>
                 <span class="source_from">source:RoBERTa-large</span>
                 <span class="each_tuple_FB">
-                    <a href="" class="check">✓</a>
-                    <a href="" class="wrong">X</a>
-                    <a href="" class="notknown">N/A</a>
+                    <a href="javascript:;" class="check">✓</a>
+                    <a href="javascript:;" class="wrong">X</a>
+                    <a href="javascript:;" class="notknown">N/A</a>
                     <!-- <a href="javascript:;"><img src="../static/imgs/check.png" alt=""></a>
                     <a href="javascript:;"><img src="../static/imgs/wrong.png" alt=""></a>
                     <a href="javascript:;"><img src="../static/imgs/NA.png" alt=""></a> -->
@@ -209,15 +210,15 @@
             <div class="each_tuple">
                 <span class="entity1">mask</span>
                 <span class="each_tuple_RW">
-                    <span class="each_tuple_relationship">⟶BeUsedForAAAAAAAAAAA⟶</span>
+                    <span class="each_tuple_relationship">⟶BeUsedFor⟶</span>
                     <span class="each_tuple_weight">weight:0.11141</span>
                 </span>
                 <span class="entity2">face mask</span>
                 <span class="source_from">source:RoBERTa-large</span>
                 <span class="each_tuple_FB">
-                    <a href="" class="check">✓</a>
-                    <a href="" class="wrong">X</a>
-                    <a href="" class="notknown">N/A</a>
+                    <a href="javascript:;" class="check">✓</a>
+                    <a href="javascript:;" class="wrong">X</a>
+                    <a href="javascript:;" class="notknown">N/A</a>
                 </span>
             </div>
 
@@ -230,9 +231,9 @@
                 <span class="entity2">play football</span>
                 <span class="source_from">source:RoBERTa-large</span>
                 <span class="each_tuple_FB">
-                    <a href="" class="check">✓</a>
-                    <a href="" class="wrong">X</a>
-                    <a href="" class="notknown">N/A</a>
+                    <a href="javascript:;" class="check">✓</a>
+                    <a href="javascript:;" class="wrong">X</a>
+                    <a href="javascript:;" class="notknown">N/A</a>
                 </span>
             </div>
 
@@ -245,9 +246,9 @@
                 <span class="entity2">social media</span>
                 <span class="source_from">source:RoBERTa-large</span>
                 <span class="each_tuple_FB">
-                    <a href="" class="check">✓</a>
-                    <a href="" class="wrong">X</a>
-                    <a href="" class="notknown">N/A</a>
+                    <a href="javascript:;" class="check">✓</a>
+                    <a href="javascript:;" class="wrong">X</a>
+                    <a href="javascript:;" class="notknown">N/A</a>
                 </span>
             </div>
 
@@ -260,9 +261,9 @@
                 <span class="entity2">cross roads</span>
                 <span class="source_from">source:RoBERTa-large</span>
                 <span class="each_tuple_FB">
-                    <a href="" class="check">✓</a>
-                    <a href="" class="wrong">X</a>
-                    <a href="" class="notknown">N/A</a>
+                    <a href="javascript:;" class="check">✓</a>
+                    <a href="javascript:;" class="wrong">X</a>
+                    <a href="javascript:;" class="notknown">N/A</a>
                 </span>
             </div>
 
