--- a/static/css/resultER.css
+++ b/static/css/resultER.css
@@ -72,7 +72,18 @@ body {
     font: normal 700 12px 'Poppins', sans-serif;
 }
 
-.nav_bar_box .w .fl ul #DocumentID:hover, .nav_bar_box .w .fl ul #FQID:hover, .nav_bar_box .w .fl ul #AboutID:hover {
+.nav_bar_box .w .fr ul li a {
+    display: inline-block;
+    padding-left: 20px;
+    padding-right: 20px;
+    font: normal 700 12px 'Poppins', sans-serif;
+}
+
+.nav_bar_box .w .fl ul #DocumentID:hover, .nav_bar_box .w .fl ul #Github:hover, .nav_bar_box .w .fl ul #AboutID:hover {
+    border-bottom: 2px solid #00eeff;
+}
+
+.nav_bar_box .w .fr ul #tuple_download:hover {
     border-bottom: 2px solid #00eeff;
 }
 
@@ -460,6 +471,22 @@ body {
     color: #000;
 }
 
+.result_tuples .feedback_col {
+    position: relative;
+}
+
+.result_tuples .feedback_col:hover::before {
+    position: absolute;
+    top: -130px;
+    left: 0;
+    color: #fff;
+    font-size: .8em;
+    background: #1ac4e6;
+    padding: 5px;
+    border-radius: 5px;
+    content: 'We are looking forwards to getting the feedback from you';
+}
+
 .result_tuples .tuples_col {
     width: 80%;
 }
@@ -558,6 +585,10 @@ body {
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.9);
 }
 
+/* .each_tuple .each_tuple_FB .active {
+    background-color: #fc0399;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.9);
+} */
 
 .result_board .download_but {
     margin-left: 50%;
