mouse hover update

--- a/templates/resultER.html
+++ b/templates/resultER.html
@@ -216,9 +216,9 @@
                 <span class="entity2">face mask</span>
                 <span class="source_from">source:RoBERTa-large</span>
                 <span class="each_tuple_FB">
-                    <a href="javascript:;" class="check">✓</a>
-                    <a href="javascript:;" class="wrong">X</a>
-                    <a href="javascript:;" class="notknown">N/A</a>
+                    <a href="javascript:;" class="check but">✓</a>
+                    <a href="javascript:;" class="wrong but">X</a>
+                    <a href="javascript:;" class="notknown but">N/A</a>
                 </span>
             </div>
 
@@ -272,7 +272,9 @@
 
     </section>
 
-
+    <div>
+        <audio src="../static/but_hover_sound.mp3" autoplay preload controls></audio>
+    </div>
 
 
     <section class="footer_box">
