other than select update

--- a/templates/resultER.html
+++ b/templates/resultER.html
@@ -124,7 +124,7 @@
         <!-- <div class="download_but">
             <a href="javascript:;">Download Tuples</a>
         </div> -->
-
+        <div class="prompt_title">Intermediate Prompt</div>
         <div class="show_prompt_socre">
             <div class="prompt">
                 <div class="title">Prompt Column</div>
