--- a/static/css/resultER.css
+++ b/static/css/resultER.css
@@ -135,7 +135,7 @@ body {
     padding-top: 20px;
     margin-left: 50%;
     color: #000;
-    font: normal 700 20px 'Poppins', sans-serif;
+    font: normal 700 16px 'Poppins', sans-serif;
 }
 
 .result_board .model_type_div, .result_board .relationship_div, .result_board .seed_entity_div {
@@ -401,6 +401,12 @@ body {
     letter-spacing: 2px;
 }
 
+.prompt_title {
+    margin-left: 50%;
+    color: black;
+    font: normal 700 16px 'Poppins', sans-serif;
+}
+
 .show_prompt_socre {
     height: 100px;
     width: 80%;
@@ -534,7 +540,7 @@ body {
 }
 
 .each_tuple .source_from {
-    width: 15%;
+    width: 20%;
     text-align: center;
     font: normal 200 10px 'Poppins', sans-serif;
     line-height: 42px;
